ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: security
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.local.vote # الدومين الأول
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-svc
            port:
              # number: 8080
              name: vote-svc-port
  - host: app.local.result 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-svc
            port:
              # number: 8081
              name: result-svc-port
